--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ The metadata will not be displayed on the page, but are used by browsers (how to
         Setting the viewport to make your website look good on all devices:
     -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <base href="https://www.w3schools.com/" target="_blank">
     <title>meta tag</title>
 </head>
 <body>
